--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,7 +290,7 @@ img {
     left: 0;
     top: 0; }
   .slider-show .slider-show-heading .caption {
-    max-width: 500px;
+    max-width: 450px;
     text-align: justify; }
     .slider-show .slider-show-heading .caption h4 {
       color: #93268f;
@@ -354,6 +354,17 @@ img {
       color: #a9dae8; }
 #main .home-slide {
   padding-bottom: 60px; }
+  #main .home-slide .owl-slide .slideshow-img {
+    position: relative; }
+    #main .home-slide .owl-slide .slideshow-img:before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.2); }
   #main .home-slide .owl-slide .owl-dots {
     margin: 20px 0; }
     #main .home-slide .owl-slide .owl-dots .owl-dot.active button {
@@ -438,7 +449,8 @@ img {
     border-radius: 50px;
     -webkit-box-shadow: 0px 2px 6px 0 #d6d6d6;
     -moz-box-shadow: 0px 2px 6px 0 #d6d6d6;
-    box-shadow: 0px 2px 6px 0 #d6d6d6; }
+    box-shadow: 0px 2px 6px 0 #d6d6d6;
+    min-height: 72px; }
     #main .home-kols .col-left .kol-text:after {
       content: "";
       display: block;
@@ -451,24 +463,28 @@ img {
       margin-top: -8px;
       top: 100%;
       left: 12%; }
-  #main .home-kols .col-left .owl-kols .kol-inner {
-    text-align: center;
-    margin: 5px 0;
-    -webkit-box-shadow: 0 0 6px 0 #d6d6d6;
-    -moz-box-shadow: 0 0 6px 0 #d6d6d6;
-    box-shadow: 0 0 6px 0 #d6d6d6;
+  #main .home-kols .col-left .owl-kols {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;
-    overflow: hidden; }
-    #main .home-kols .col-left .owl-kols .kol-inner .info {
-      padding: 10px; }
-      #main .home-kols .col-left .owl-kols .kol-inner .info .name {
-        margin-bottom: 10px;
-        color: #93268f;
-        font-weight: 600; }
-      #main .home-kols .col-left .owl-kols .kol-inner .info .career {
-        color: #f5518a; }
+    border-radius: 5px; }
+    #main .home-kols .col-left .owl-kols .kol-inner {
+      text-align: center;
+      margin: 5px 0;
+      -webkit-box-shadow: 0 0 6px 0 #d6d6d6;
+      -moz-box-shadow: 0 0 6px 0 #d6d6d6;
+      box-shadow: 0 0 6px 0 #d6d6d6;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      overflow: hidden; }
+      #main .home-kols .col-left .owl-kols .kol-inner .info {
+        padding: 10px; }
+        #main .home-kols .col-left .owl-kols .kol-inner .info .name {
+          margin-bottom: 10px;
+          color: #93268f;
+          font-weight: 600; }
+        #main .home-kols .col-left .owl-kols .kol-inner .info .career {
+          color: #f5518a; }
 #main .home-customers {
   background: transparent url("../img/bg-customers.jpg") repeat left top; }
   #main .home-customers .customer-title {
