--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -1,26 +1,26 @@
 @import "_mixins.scss";
 
-@include responsive_320{
+@include responsive_320 {
 
 }
 
-@include responsive_375{
+@include responsive_375 {
 
 }
 
-@include responsive_425{
+@include responsive_425 {
 
 }
 
-@include responsive_768{
+@include responsive_768 {
 
 }
 
-@include responsive_992{
+@include responsive_992 {
 
 }
 
-@include responsive_1024{
+@include responsive_1024 {
     #main {
         .home-about {
             .about-right {
@@ -30,7 +30,7 @@
     }
 }
 
-@include responsive_1200{
+@include responsive_1200 {
 
 }
 
@@ -49,12 +49,14 @@
 @media only screen and (max-width: 1024px) {
     #header {
         .header-main {
-            padding: 0;
             .navbar {
                 .logo img {
                     max-height: 50px;
                 }
-                .nav ul li a {margin: 0 5px;}
+
+                .nav ul li a {
+                    margin: 0 5px;
+                }
             }
         }
     }
@@ -73,12 +75,15 @@
                 margin-bottom: 30px;
             }
         }
+
         .home-slide {
             padding: 0 0 30px;
         }
+
         .home-kols {
             .owl-kols {
                 margin-bottom: 30px;
+
                 .kol-inner .info .name {
                     font-size: 20px;
                 }
@@ -91,6 +96,7 @@
             .col-left {
                 margin-bottom: 30px;
             }
+
             .col-right {
                 .box-info {
                     .info {
@@ -101,6 +107,7 @@
                 }
             }
         }
+
         .footer-bottom {
             padding: 25px 0;
         }
@@ -108,6 +115,11 @@
 }
 
 @media only screen and (max-width: 991px) {
+    #header {
+        .header-main {
+            padding: 0;
+        }
+    }
     #main {
         .home-about {
             .about-right {
