--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -31,7 +31,9 @@
 }
 
 @include responsive_1200 {
-
+    #footer .footer-top .box-video .embed-responsive-4by3::before {
+        padding-top: 88%
+    }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -49,22 +51,22 @@
 @media only screen and (max-width: 1024px) {
     #header {
         .header-main {
+            padding: 0;
             .navbar {
                 .logo img {
                     max-height: 50px;
                 }
-
-                .nav ul li a {
-                    margin: 0 5px;
+                .nav {
+                    >ul >li >a {
+                        font-size: 14px;
+                        >i {
+                            vertical-align: top;
+                        }
+                    }
+                    ul li a {
+                        margin: 0 5px;
+                    }
                 }
-            }
-        }
-    }
-
-    .slider-show {
-        .slider-show-heading {
-            .slider-show-image {
-                background-position: center top;
             }
         }
     }
@@ -120,6 +122,7 @@
             padding: 0;
         }
     }
+
     #main {
         .home-about {
             .about-right {
@@ -127,5 +130,12 @@
                 margin-top: 15px;
             }
         }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #footer .footer-top .col-left {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
