--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,70 +1,2 @@
-/*
-.selector {
-  @include prefix((
-    column-count: 3,
-    column-gap: 1.5em,
-    column-rule: 2px solid hotpink
-  ), webkit moz);
-}
-
-.selector {
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-  -webkit-column-gap: 1.5em;
-  -moz-column-gap: 1.5em;
-  column-gap: 1.5em;
-  -webkit-column-rule: 2px solid hotpink;
-  -moz-column-rule: 2px solid hotpink;
-  column-rule: 2px solid hotpink;
-}
-*/
-@media only screen and (min-width: 1024px) and (max-width: 1199px) {
-  #main .home-about .about-right {
-    padding-left: 15px; } }
-@media only screen and (min-width: 1200px) {
-  #footer .footer-top .box-video .embed-responsive-4by3::before {
-    padding-top: 88%; } }
-@media only screen and (min-width: 1024px) and (max-width: 1349px) {
-  #footer .footer-bottom {
-    padding: 25px 0; } }
-@media only screen and (max-width: 1024px) {
-  #header .header-main {
-    padding: 0; }
-    #header .header-main .navbar .logo img {
-      max-height: 50px; }
-    #header .header-main .navbar .nav > ul > li > a {
-      font-size: 14px; }
-      #header .header-main .navbar .nav > ul > li > a > i {
-        vertical-align: top; }
-    #header .header-main .navbar .nav ul li a {
-      margin: 0 5px; }
-
-  #main .home-services .service-item {
-    margin-bottom: 30px; }
-  #main .home-slide {
-    padding: 0 0 30px; }
-  #main .home-kols .owl-kols {
-    margin-bottom: 30px; }
-    #main .home-kols .owl-kols .kol-inner .info .name {
-      font-size: 20px; }
-
-  #footer .footer-top .col-left {
-    margin-bottom: 30px; }
-  #footer .footer-top .col-right .box-info .info img {
-    max-width: 160px; }
-  #footer .footer-bottom {
-    padding: 25px 0; } }
-@media only screen and (max-width: 991px) {
-  #header .header-main {
-    padding: 0; }
-
-  #main .home-about .about-right {
-    padding-left: 15px;
-    margin-top: 15px; } }
-@media only screen and (max-width: 768px) {
-  #footer .footer-top .col-left {
-    padding-left: 0;
-    padding-right: 0; } }
-
+@media only screen and (min-width: 1024px) and (max-width: 1199px){#main .home-about .about-right{padding-left:15px}}@media only screen and (min-width: 1200px){#footer .footer-top .box-video .embed-responsive-4by3::before{padding-top:88%}}@media only screen and (min-width: 1024px) and (max-width: 1349px){#footer .footer-bottom{padding:25px 0}}@media only screen and (max-width: 1024px){#header .header-main{padding:0}#header .header-main .navbar .logo img{max-height:50px}#header .header-main .navbar .nav>ul>li>a{font-size:14px}#header .header-main .navbar .nav>ul>li>a>i{vertical-align:top}#header .header-main .navbar .nav ul li a{margin:0 5px}#main .home-services .service-item{margin-bottom:30px}#main .home-slide{padding:0 0 30px}#main .home-kols .owl-kols{margin-bottom:30px}#main .home-kols .owl-kols .kol-inner .info .name{font-size:20px}#footer .footer-top .col-left{margin-bottom:30px}#footer .footer-top .col-right .box-info .info img{max-width:160px}#footer .footer-bottom{padding:25px 0}}@media only screen and (max-width: 991px){#header .header-main{padding:0}#main .home-about .about-right{padding-left:15px;margin-top:15px}}@media only screen and (max-width: 768px){#footer .footer-top .col-left{padding-left:0;padding-right:0}}
 /*# sourceMappingURL=responsive.css.map */
