--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,2 +1,156 @@
-@media only screen and (min-width: 1024px) and (max-width: 1199px){#main .home-about .about-right{padding-left:15px}}@media only screen and (min-width: 1200px){#footer .footer-top .box-video .embed-responsive-4by3::before{padding-top:88%}}@media only screen and (min-width: 1024px) and (max-width: 1349px){#footer .footer-bottom{padding:25px 0}}@media only screen and (max-width: 1024px){#header .header-main{padding:0}#header .header-main .navbar .logo img{max-height:50px}#header .header-main .navbar .nav>ul>li>a{font-size:14px}#header .header-main .navbar .nav>ul>li>a>i{vertical-align:top}#header .header-main .navbar .nav ul li a{margin:0 5px}#main .home-services .service-item{margin-bottom:30px}#main .home-slide{padding:0 0 30px}#main .home-kols .owl-kols{margin-bottom:30px}#main .home-kols .owl-kols .kol-inner .info .name{font-size:20px}#footer .footer-top .col-left{margin-bottom:30px}#footer .footer-top .col-right .box-info .info img{max-width:160px}#footer .footer-bottom{padding:25px 0}}@media only screen and (max-width: 991px){#header .header-main{padding:0}#main .home-about .about-right{padding-left:15px;margin-top:15px}}@media only screen and (max-width: 768px){#footer .footer-top .col-left{padding-left:0;padding-right:0}}
+@media only screen and (min-width: 1024px) and (max-width: 1199px) {
+  #main .home-about .about-right {
+    padding-left: 15px; } }
+@media only screen and (min-width: 1200px) {
+  #footer .footer-top .box-video .embed-responsive-4by3::before {
+    padding-top: 88%; } }
+@media only screen and (min-width: 1024px) and (max-width: 1349px) {
+  #footer .footer-bottom {
+    padding: 25px 0; } }
+@media only screen and (max-width: 1024px) {
+  .page-breadcrumb {
+    padding: 30px 0; }
+
+  #header .header-main {
+    padding: 0; }
+    #header .header-main .navbar .logo img {
+      max-height: 50px; }
+    #header .header-main .navbar .nav > ul > li > a {
+      font-size: 14px; }
+      #header .header-main .navbar .nav > ul > li > a > i {
+        vertical-align: top; }
+    #header .header-main .navbar .nav ul li a {
+      margin: 0 5px; }
+
+  #main .home-services .service-item {
+    margin-bottom: 30px; }
+  #main .home-slide {
+    padding: 0 0 30px; }
+  #main .home-kols .owl-kols {
+    margin-bottom: 30px; }
+    #main .home-kols .owl-kols .kol-inner .info .name {
+      font-size: 20px; }
+  #main .about-us-wrap .about-us .content-column .inner-column {
+    padding-left: 30px; }
+    #main .about-us-wrap .about-us .content-column .inner-column h2, #main .about-us-wrap .about-us .content-column .inner-column h3.title {
+      font-size: 46px; }
+  #main .about-us-wrap .booking .booking-left .inner-column h3.title {
+    font-size: 46px; }
+  #main .about-us-wrap .booking .booking-left .inner-column .booking-form .form-title {
+    font-size: 18px; }
+  #main .about-us-wrap .booking .booking-left .inner-column .booking-form .regis .inner .btn-primary {
+    padding: 10px;
+    background-position: 10px; }
+  #main .about-us-wrap .booking .booking-left .inner-column .booking-form .info .inner ul li:first-child {
+    margin-bottom: 10px; }
+  #main .about-us-wrap .booking .booking-left .inner-column .booking-form .info .inner ul li i {
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    margin-right: 5px; }
+  #main .about-us-wrap .booking .booking-left .inner-column .booking-form .info .inner ul li strong {
+    margin-right: 10px; }
+  #main .about-us-wrap .wts-map .wts-content .wts-c-step .wts-c-heading {
+    font-size: 18px; }
+
+  #footer .footer-top .col-left {
+    margin-bottom: 30px; }
+  #footer .footer-top .col-right .box-info .info img {
+    max-width: 160px; }
+  #footer .footer-bottom {
+    padding: 25px 0; } }
+@media only screen and (max-width: 991px) {
+  #header .header-main {
+    padding: 0; }
+
+  #main .home-about .about-right {
+    padding-left: 15px;
+    margin-top: 15px; }
+  #main .about-us-wrap .about-us {
+    padding-bottom: 0; }
+    #main .about-us-wrap .about-us .content-column .inner-column {
+      padding-left: 0; }
+  #main .about-us-wrap .booking .booking-right {
+    display: none; }
+  #main .about-us-wrap .wts-map .wts-heading {
+    margin-bottom: 30px; }
+    #main .about-us-wrap .wts-map .wts-heading .line-no-arrow, #main .about-us-wrap .wts-map .wts-heading .line-has-arrow {
+      display: none !important; }
+  #main .about-us-wrap .wts-map .wts-content .col-lg-3 {
+    margin-bottom: 30px; }
+    #main .about-us-wrap .wts-map .wts-content .col-lg-3 .wts-c-step:before, #main .about-us-wrap .wts-map .wts-content .col-lg-3 .wts-c-step:after {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 50%;
+      bottom: 100%; }
+    #main .about-us-wrap .wts-map .wts-content .col-lg-3 .wts-c-step:before {
+      width: 2px;
+      height: 28px !important;
+      background: #fff;
+      -webkit-transform: translateX(-50%) translateY(-2px);
+      -moz-transform: translateX(-50%) translateY(-2px);
+      transform: translateX(-50%) translateY(-2px); }
+    #main .about-us-wrap .wts-map .wts-content .col-lg-3 .wts-c-step:after {
+      width: 0;
+      height: 0;
+      border-left: 7px solid transparent;
+      border-right: 7px solid transparent;
+      border-top: 10px solid #fff;
+      transform: translateX(-50%); }
+    #main .about-us-wrap .wts-map .wts-content .col-lg-3 .wts-c-step.active:after {
+      border-top-color: #f5518a; }
+    #main .about-us-wrap .wts-map .wts-content .col-lg-3 .wts-c-step .arrow-right {
+      display: none; }
+    #main .about-us-wrap .wts-map .wts-content .col-lg-3 .wts-c-step .wts-c-heading {
+      font-size: 22px; }
+    #main .about-us-wrap .wts-map .wts-content .col-lg-3:last-child {
+      margin-bottom: 0; }
+      #main .about-us-wrap .wts-map .wts-content .col-lg-3:last-child .wts-c-step:before {
+        display: block; }
+  #main .about-us-wrap .wts-map.expand-only.step4 .wts-heading .wts-main-heading:after {
+    display: none; } }
+@media only screen and (max-width: 768px) {
+  .page-breadcrumb h1 {
+    font-size: 46px; }
+
+  #main .about-us-wrap .booking .booking-left .inner-column .booking-form .logo .inner {
+    padding: 0 !important;
+    text-align: center; }
+
+  #footer .footer-top .col-left {
+    padding-left: 0;
+    padding-right: 0; } }
+@media only screen and (max-width: 480px) {
+  .page-breadcrumb:before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5); }
+  .page-breadcrumb .container {
+    position: relative; }
+    .page-breadcrumb .container h1 {
+      font-size: 36px; }
+
+  #main .about-us-wrap .booking .booking-left .inner-column h3.title {
+    font-size: 32px; }
+  #main .about-us-wrap .booking .booking-form .form-group > div, #main .about-us-wrap .booking .booking-form .regis, #main .about-us-wrap .booking .booking-form .info {
+    margin-bottom: 15px; }
+  #main .about-us-wrap .booking .booking-form .logo .inner {
+    padding: 0 !important; }
+  #main .about-us-wrap .wts-map {
+    padding-top: 30px;
+    padding-bottom: 30px; }
+
+  #footer .footer-middle {
+    padding: 30px 0; }
+    #footer .footer-middle .footer-info .info, #footer .footer-middle .footer-info .social {
+      max-width: 100%; }
+    #footer .footer-middle .footer-nav {
+      margin-top: 15px; } }
+
 /*# sourceMappingURL=responsive.css.map */
